...
/// A choice option is a light-weight interface for a list of choices that should be displayed to the participant.
public protocol ChoiceOption {

    /// This is the JSON serializable element selected as one of the possible answers for a ``Question``. For certain
    /// special cases, the value may depend upon whether or not the item is selected.
    ///
    /// For example, a boolean ``Question`` may be displayed using choice items of "Yes" and "No" in a list. The choices
    /// would both be ``exclusive`` and the returned value for "Yes" could be `true` if ``selected`` and `null`
    /// if not while for the "No", it could be `false` if ``selected`` and `null` if not.
    func jsonElement(selected: Bool) -> JsonElement?

    /// A localized string that displays a short text offering a hint to the user of the data to be entered for this field.
    var fieldLabel: String { get }
...
